--- a/superior-shepherd/src/pages/md/3.md
+++ b/superior-shepherd/src/pages/md/3.md
@@ -2,7 +2,7 @@
 
 ## 创建`.astro`页面
 
-在`pages`目录中创建`.astro`页面。例如`about.astro`。`。astro`文件类似于`html`文件。可以在其中书写HTMLCSS以及JavaScript
+在`pages`目录中创建`.astro`页面。例如`about.astro`.`astro`文件类似于`html`文件。可以在其中书写HTMLCSS以及JavaScript
 
 ## 创建`.md`页面
 
